Fix error message CSS on mobile screens

--- a/sass/_link-form.scss
+++ b/sass/_link-form.scss
@@ -72,5 +72,13 @@
     font-size: 1.6rem;
     width: 100%;
     font-weight: 600;
+
+    @media (max-width: v.$breakpoint-lg) {
+      left: 0;
+    }
+    @media (max-width: v.$breakpoint-md) {
+      bottom: 0;
+      left: 0;
+    }
   }
 }
