--- a/src/css/main.css
+++ b/src/css/main.css
@@ -314,6 +314,17 @@
   width: 100%;
   font-weight: 600;
 }
+@media (max-width: 992px) {
+  .link-form__error-message {
+    left: 0;
+  }
+}
+@media (max-width: 768px) {
+  .link-form__error-message {
+    bottom: 0;
+    left: 0;
+  }
+}
 
 .short-links {
   background: #e9e9f0;
@@ -707,7 +718,6 @@
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth;
 }
 
 body {
@@ -746,12 +756,12 @@ h3 {
   max-width: 1200px;
   padding: 0 3rem;
 }
-@media (max-width: calc 993px) {
+@media (max-width: 993px) {
   .container {
     max-width: 768px;
   }
 }
-@media (max-width: 768px -1px) {
+@media (max-width: 767px) {
   .container {
     max-width: 576px;
   }
